--- a/src/about.html
+++ b/src/about.html
@@ -8,29 +8,16 @@
 </head>
 <body>
 
-  <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
-    <div class="container-fluid">
-      <ul class="navbar-nav">
-        <li class="navbar-brand">Event Application</li>
-        <li class="nav-item">
-          <a class="nav-link" href="./">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="./status.html">Status</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" href="#">About</a>
-        </li>
-      </ul>
-    </div>
+  <nav class="navbar navbar-expand-sm bg-primary navbar-dark" id="navbar">
+
   </nav>
 
   <div class="container">
     <div class="container">
       <h2>About</h2>
       
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
+      <p>Welcome one and all to a brilliant show and discussion on how great coding is! We invite programmers of all ages, skill levels and professions to come on down to the Hult Center to celebrate, learn and party on with your favorite languages!</p>
+      <p>Admission is $2 and there will be snacks, drinks and even prizes! This is a two day event that goes ALL DAY AND NIGHT!! Hope to see you there for some crazy cool coding !!</p>
     </div>
     <div class="container">
       <h2>Event Location</h2>
