--- a/src/index.html
+++ b/src/index.html
@@ -7,21 +7,8 @@
 </head>
 <body>
 
-  <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
-    <div class="container-fluid">
-      <ul class="navbar-nav">
-        <li class="navbar-brand">Event Application</li>
-        <li class="nav-item">
-          <a class="nav-link active" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="./status.html">Status</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="./about.html">About</a>
-        </li>
-      </ul>
-    </div>
+  <nav class="navbar navbar-expand-sm bg-primary navbar-dark" id="navbar">
+
   </nav>
 
   <div class="container">
